[gin-tuto] module ㄱ각각 분리 grafana;public 생성 및 구조화
